--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>The Seven Wonders of the Ancient World</h1>
   </header>
 <main>
-  <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-he-wonders-of-the-ancient-world-walters-37656.jpg"> 
+  <img src="images/Maerten-van-Heemskerck---Panorama-with-the-Abduction-of-Helen-Amidst-he-wonders-of-the-ancient-world---walters-37656.jpg"> alt="panorama of wonders of the ancient world">
   <div class="banner-text">
   <h2>Remarkable constructions of classical antiquity—lost in time</h2>
   <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
