--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header role="banner">
     <h1>The Seven Wonders of the Ancient World</h1>
   </header>
-<main role="main"
+<main role= 
 <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-he-wonders-of-the-ancient-world-walters-37656.jpg"> alt="Panorama of wonders of the ancient world">
   <div class="banner-text">
   <h2>Remarkable constructions of classical antiquity—lost in time</h2>
